sparse/output/sparsecsvParser.py
# Generated from sparsecsv.g4 by ANTLR 4.7.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class sparsecsvParser ( Parser ):

    grammarFileName = "sparsecsv.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'{'", u"'}'", u"'('", u"')'", u"','", 
                     u"<INVALID>", u"<INVALID>", u"'\n'", u"'\\,'" ]

    symbolicNames = [ u"<INVALID>", u"LBRACE", u"RBRACE", u"LPAREN", u"RPAREN", 
                      u"COMMA", u"QUOTES", u"STRING", u"NEWLINE", u"BSCOMMA" ]

    RULE_csv = 0
    RULE_row = 1
    RULE_col = 2
    RULE_entry = 3
    RULE_sparse_array = 4
    RULE_array = 5
    RULE_indices = 6
    RULE_elements = 7
    RULE_string = 8

    ruleNames =  [ u"csv", u"row", u"col", u"entry", u"sparse_array", u"array", 
                   u"indices", u"elements", u"string" ]

    EOF = Token.EOF
    LBRACE=1
    RBRACE=2
    LPAREN=3
    RPAREN=4
    COMMA=5
    QUOTES=6
    STRING=7
    NEWLINE=8
    BSCOMMA=9

    def __init__(self, input, output=sys.stdout):
        super(sparsecsvParser, self).__init__(input, output=output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CsvContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(sparsecsvParser.CsvContext, self).__init__(parent, invokingState)
            self.parser = parser

        def row(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(sparsecsvParser.RowContext)
            else:
                return self.getTypedRuleContext(sparsecsvParser.RowContext,i)


        def EOF(self):
            return self.getToken(sparsecsvParser.EOF, 0)

        def NEWLINE(self, i=None):
            if i is None:
                return self.getTokens(sparsecsvParser.NEWLINE)
            else:
                return self.getToken(sparsecsvParser.NEWLINE, i)

        def getRuleIndex(self):
            return sparsecsvParser.RULE_csv

        def enterRule(self, listener):
            if hasattr(listener, "enterCsv"):
                listener.enterCsv(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCsv"):
                listener.exitCsv(self)




    def csv(self):

        localctx = sparsecsvParser.CsvContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_csv)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.row()
            self.state = 23
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 19
                    self.match(sparsecsvParser.NEWLINE)
                    self.state = 20
                    self.row() 
                self.state = 25
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sparsecsvParser.NEWLINE:
                self.state = 26
                self.match(sparsecsvParser.NEWLINE)


            self.state = 29
            self.match(sparsecsvParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RowContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(sparsecsvParser.RowContext, self).__init__(parent, invokingState)
            self.parser = parser

        def entry(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(sparsecsvParser.EntryContext)
            else:
                return self.getTypedRuleContext(sparsecsvParser.EntryContext,i)


        def col(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(sparsecsvParser.ColContext)
            else:
                return self.getTypedRuleContext(sparsecsvParser.ColContext,i)


        def getRuleIndex(self):
            return sparsecsvParser.RULE_row

        def enterRule(self, listener):
            if hasattr(listener, "enterRow"):
                listener.enterRow(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRow"):
                listener.exitRow(self)




    def row(self):

        localctx = sparsecsvParser.RowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_row)
        self._la = 0 # Token type
        try:
            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [sparsecsvParser.LPAREN, sparsecsvParser.QUOTES, sparsecsvParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.entry()
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==sparsecsvParser.COMMA:
                    self.state = 32
                    self.col()
                    self.state = 34
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sparsecsvParser.LPAREN) | (1 << sparsecsvParser.QUOTES) | (1 << sparsecsvParser.STRING))) != 0):
                        self.state = 33
                        self.entry()


                    self.state = 40
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [sparsecsvParser.COMMA]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 41
                    self.col()
                    self.state = 43
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sparsecsvParser.LPAREN) | (1 << sparsecsvParser.QUOTES) | (1 << sparsecsvParser.STRING))) != 0):
                        self.state = 42
                        self.entry()


                    self.state = 47 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==sparsecsvParser.COMMA):
                        break

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ColContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(sparsecsvParser.ColContext, self).__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(sparsecsvParser.COMMA, 0)

        def getRuleIndex(self):
            return sparsecsvParser.RULE_col

        def enterRule(self, listener):
            if hasattr(listener, "enterCol"):
                listener.enterCol(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCol"):
                listener.exitCol(self)




    def col(self):

        localctx = sparsecsvParser.ColContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_col)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(sparsecsvParser.COMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EntryContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(sparsecsvParser.EntryContext, self).__init__(parent, invokingState)
            self.parser = parser

        def sparse_array(self):
            return self.getTypedRuleContext(sparsecsvParser.Sparse_arrayContext,0)


        def string(self):
            return self.getTypedRuleContext(sparsecsvParser.StringContext,0)


        def getRuleIndex(self):
            return sparsecsvParser.RULE_entry

        def enterRule(self, listener):
            if hasattr(listener, "enterEntry"):
                listener.enterEntry(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitEntry"):
                listener.exitEntry(self)




    def entry(self):

        localctx = sparsecsvParser.EntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_entry)
        try:
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.sparse_array()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.string()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Sparse_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(sparsecsvParser.Sparse_arrayContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(sparsecsvParser.LPAREN, 0)

        def indices(self):
            return self.getTypedRuleContext(sparsecsvParser.IndicesContext,0)


        def COMMA(self):
            return self.getToken(sparsecsvParser.COMMA, 0)

        def elements(self):
            return self.getTypedRuleContext(sparsecsvParser.ElementsContext,0)


        def RPAREN(self):
            return self.getToken(sparsecsvParser.RPAREN, 0)

        def QUOTES(self, i=None):
            if i is None:
                return self.getTokens(sparsecsvParser.QUOTES)
            else:
                return self.getToken(sparsecsvParser.QUOTES, i)

        def getRuleIndex(self):
            return sparsecsvParser.RULE_sparse_array

        def enterRule(self, listener):
            if hasattr(listener, "enterSparse_array"):
                listener.enterSparse_array(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSparse_array"):
                listener.exitSparse_array(self)




    def sparse_array(self):

        localctx = sparsecsvParser.Sparse_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sparse_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sparsecsvParser.QUOTES:
                self.state = 57
                self.match(sparsecsvParser.QUOTES)


            self.state = 60
            self.match(sparsecsvParser.LPAREN)
            self.state = 61
            self.indices()
            self.state = 62
            self.match(sparsecsvParser.COMMA)
            self.state = 63
            self.elements()
            self.state = 64
            self.match(sparsecsvParser.RPAREN)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sparsecsvParser.QUOTES:
                self.state = 65
                self.match(sparsecsvParser.QUOTES)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(sparsecsvParser.ArrayContext, self).__init__(parent, invokingState)
            self.parser = parser

        def string(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(sparsecsvParser.StringContext)
            else:
                return self.getTypedRuleContext(sparsecsvParser.StringContext,i)


        def EOF(self):
            return self.getToken(sparsecsvParser.EOF, 0)

        def LBRACE(self):
            return self.getToken(sparsecsvParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(sparsecsvParser.RBRACE, 0)

        def NEWLINE(self):
            return self.getToken(sparsecsvParser.NEWLINE, 0)

        def BSCOMMA(self, i=None):
            if i is None:
                return self.getTokens(sparsecsvParser.BSCOMMA)
            else:
                return self.getToken(sparsecsvParser.BSCOMMA, i)

        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(sparsecsvParser.COMMA)
            else:
                return self.getToken(sparsecsvParser.COMMA, i)

        def getRuleIndex(self):
            return sparsecsvParser.RULE_array

        def enterRule(self, listener):
            if hasattr(listener, "enterArray"):
                listener.enterArray(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitArray"):
                listener.exitArray(self)




    def array(self):

        localctx = sparsecsvParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sparsecsvParser.LBRACE:
                self.state = 68
                self.match(sparsecsvParser.LBRACE)


            self.state = 71
            self.string()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==sparsecsvParser.COMMA or _la==sparsecsvParser.BSCOMMA:
                self.state = 72
                _la = self._input.LA(1)
                if not(_la==sparsecsvParser.COMMA or _la==sparsecsvParser.BSCOMMA):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 73
                self.string()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sparsecsvParser.RBRACE:
                self.state = 79
                self.match(sparsecsvParser.RBRACE)


            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sparsecsvParser.NEWLINE:
                self.state = 82
                self.match(sparsecsvParser.NEWLINE)


            self.state = 85
            self.match(sparsecsvParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IndicesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(sparsecsvParser.IndicesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(sparsecsvParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(sparsecsvParser.RBRACE, 0)

        def QUOTES(self, i=None):
            if i is None:
                return self.getTokens(sparsecsvParser.QUOTES)
            else:
                return self.getToken(sparsecsvParser.QUOTES, i)

        def string(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(sparsecsvParser.StringContext)
            else:
                return self.getTypedRuleContext(sparsecsvParser.StringContext,i)


        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(sparsecsvParser.COMMA)
            else:
                return self.getToken(sparsecsvParser.COMMA, i)

        def getRuleIndex(self):
            return sparsecsvParser.RULE_indices

        def enterRule(self, listener):
            if hasattr(listener, "enterIndices"):
                listener.enterIndices(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitIndices"):
                listener.exitIndices(self)




    def indices(self):

        localctx = sparsecsvParser.IndicesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_indices)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sparsecsvParser.QUOTES:
                self.state = 87
                self.match(sparsecsvParser.QUOTES)


            self.state = 90
            self.match(sparsecsvParser.LBRACE)
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [sparsecsvParser.QUOTES, sparsecsvParser.STRING]:
                self.state = 91
                self.string()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==sparsecsvParser.COMMA:
                    self.state = 92
                    self.match(sparsecsvParser.COMMA)
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==sparsecsvParser.QUOTES or _la==sparsecsvParser.STRING:
                        self.state = 93
                        self.string()


                    self.state = 100
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [sparsecsvParser.COMMA]:
                self.state = 105 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 101
                    self.match(sparsecsvParser.COMMA)
                    self.state = 103
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==sparsecsvParser.QUOTES or _la==sparsecsvParser.STRING:
                        self.state = 102
                        self.string()


                    self.state = 107 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==sparsecsvParser.COMMA):
                        break

                pass
            elif token in [sparsecsvParser.RBRACE]:
                pass
            else:
                pass
            self.state = 111
            self.match(sparsecsvParser.RBRACE)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sparsecsvParser.QUOTES:
                self.state = 112
                self.match(sparsecsvParser.QUOTES)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElementsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(sparsecsvParser.ElementsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(sparsecsvParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(sparsecsvParser.RBRACE, 0)

        def QUOTES(self, i=None):
            if i is None:
                return self.getTokens(sparsecsvParser.QUOTES)
            else:
                return self.getToken(sparsecsvParser.QUOTES, i)

        def string(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(sparsecsvParser.StringContext)
            else:
                return self.getTypedRuleContext(sparsecsvParser.StringContext,i)


        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(sparsecsvParser.COMMA)
            else:
                return self.getToken(sparsecsvParser.COMMA, i)

        def getRuleIndex(self):
            return sparsecsvParser.RULE_elements

        def enterRule(self, listener):
            if hasattr(listener, "enterElements"):
                listener.enterElements(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitElements"):
                listener.exitElements(self)




    def elements(self):

        localctx = sparsecsvParser.ElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sparsecsvParser.QUOTES:
                self.state = 115
                self.match(sparsecsvParser.QUOTES)


            self.state = 118
            self.match(sparsecsvParser.LBRACE)
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [sparsecsvParser.QUOTES, sparsecsvParser.STRING]:
                self.state = 119
                self.string()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==sparsecsvParser.COMMA:
                    self.state = 120
                    self.match(sparsecsvParser.COMMA)
                    self.state = 122
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==sparsecsvParser.QUOTES or _la==sparsecsvParser.STRING:
                        self.state = 121
                        self.string()


                    self.state = 128
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [sparsecsvParser.COMMA]:
                self.state = 133 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 129
                    self.match(sparsecsvParser.COMMA)
                    self.state = 131
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==sparsecsvParser.QUOTES or _la==sparsecsvParser.STRING:
                        self.state = 130
                        self.string()


                    self.state = 135 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==sparsecsvParser.COMMA):
                        break

                pass
            elif token in [sparsecsvParser.RBRACE]:
                pass
            else:
                pass
            self.state = 139
            self.match(sparsecsvParser.RBRACE)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sparsecsvParser.QUOTES:
                self.state = 140
                self.match(sparsecsvParser.QUOTES)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StringContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(sparsecsvParser.StringContext, self).__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(sparsecsvParser.STRING, 0)

        def QUOTES(self, i=None):
            if i is None:
                return self.getTokens(sparsecsvParser.QUOTES)
            else:
                return self.getToken(sparsecsvParser.QUOTES, i)

        def getRuleIndex(self):
            return sparsecsvParser.RULE_string

        def enterRule(self, listener):
            if hasattr(listener, "enterString"):
                listener.enterString(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitString"):
                listener.exitString(self)




    def string(self):

        localctx = sparsecsvParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_string)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sparsecsvParser.QUOTES:
                self.state = 143
                self.match(sparsecsvParser.QUOTES)


            self.state = 146
            self.match(sparsecsvParser.STRING)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==sparsecsvParser.QUOTES:
                self.state = 147
                self.match(sparsecsvParser.QUOTES)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





